--- a/SOCS0100-report.qmd
+++ b/SOCS0100-report.qmd
@@ -2,12 +2,11 @@
 title: "SOCS0100 Report: COVID-19 Cases and Deaths Data Analysis"
 format: html
 editor: visual
-bibliography: references.bib 
 ---
 
 # 1A. Data Exploration and Contextualization
 
-This report analyses the **COVID-19 Cases and Deaths Database**. The dataset comprises 411,804 observations across 10 variables, documenting the daily progression of COVID-19 across 246 countries and territories from January 2020 to August 2024. It qualifies as *panel data* as it combinines repeated daily observations (indexed by `date`) for multiple cross-sectional units (identified by `location`).This structure allows both temporal and cross-national analysis of pandemic's dynamics. Overall, the dataset includes core epidemiological indicators such as `new_cases` and `total_deaths`, as well as derived rolling metrics like `weekly_cases` and `weekly_deaths`. This dataset was selected because trends in case and death records capture how different societies responded to an unprecedented health crisis, dynamics interesting from a social science perspective. They reflect broader social processes including policy responses, institutional capacity and resource mobilization. As [@fox2021] note, COVID-19 data embody both epidemiological and socioeconomic contexts.
+This report analyses the **COVID-19 Cases and Deaths Database**. The dataset comprises 411,804 observations across 10 variables, documenting the daily progression of COVID-19 across 246 countries and territories from January 2020 to August 2024. It qualifies as *panel data* as it combinines repeated daily observations (indexed by `date`) for multiple cross-sectional units (identified by `location`).This structure allows both temporal and cross-national analysis of pandemic's dynamics. Overall, the dataset includes core epidemiological indicators such as `new_cases` and `total_deaths`, as well as derived rolling metrics like `weekly_cases` and `weekly_deaths`. This dataset was selected because trends in case and death records capture how different societies responded to an unprecedented health crisis, dynamics interesting from a social science perspective. They reflect broader social processes including policy responses, institutional capacity and resource mobilization.
 
 ## Loading and Inspecting the Data: Summary Statistics
 
